# esp-openclaw-node

./: .gitignore  README.md
.github/workflows/: upload_component.yml
components/esp-openclaw-node/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/esp-openclaw-node/include/: esp_openclaw_node.h
components/esp-openclaw-node/private_include/: esp_openclaw_node_identity.h  esp_openclaw_node_internal.h  esp_openclaw_node_persisted_session.h
components/esp-openclaw-node/src/: esp_openclaw_node.c  esp_openclaw_node_connect_source.c  esp_openclaw_node_identity.c  esp_openclaw_node_persisted_session.c  esp_openclaw_node_protocol.c  esp_openclaw_node_registry.c  esp_openclaw_node_runtime.c  esp_openclaw_node_transport.c
components/esp-openclaw-node/test_apps/: README.md
components/esp-openclaw-node/test_apps/esp_openclaw_node_unity_tests/: CMakeLists.txt  README.md
components/esp-openclaw-node/test_apps/esp_openclaw_node_unity_tests/main/: CMakeLists.txt  test_esp_openclaw_node.c
docs/: getting-started.md  troubleshooting.md
examples/: README.md
examples/common/: esp_openclaw_node_common_device_node_cmd.c  esp_openclaw_node_common_device_node_cmd.h  esp_openclaw_node_example_json.c  esp_openclaw_node_example_json.h  esp_openclaw_node_example_repl.c  esp_openclaw_node_example_repl.h  esp_openclaw_node_example_repl_cmd.c  esp_openclaw_node_example_repl_cmd.h  esp_openclaw_node_example_saved_session_reconnect.c  esp_openclaw_node_example_saved_session_reconnect.h  esp_openclaw_node_wifi.c  esp_openclaw_node_wifi.h
examples/esp32-node/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/esp32-node/main/: CMakeLists.txt  app_main.c  esp_openclaw_node_example_adc_node_cmd.c  esp_openclaw_node_example_adc_node_cmd.h  esp_openclaw_node_example_cmd.c  esp_openclaw_node_example_cmd.h  esp_openclaw_node_example_gpio_node_cmd.c  esp_openclaw_node_example_gpio_node_cmd.h
